--- a/Main.html
+++ b/Main.html
@@ -5,19 +5,84 @@
     <title>Products</title>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <!-- Don't use this in production: -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
 <div id="product"></div>
 <div id="root"></div>
+<div>
 
-<div id="ascending_button"></div>
-<div id="descending_button"></div>
-<div id="grouped_ascending_button"></div>
-<div id="grouped_descending_button"></div>
+    <div id="ascending_button"></div>
+    <div id="descending_button"></div>
+    <div id="grouped_ascending_button"></div>
+    <div id="grouped_descending_button"></div>
+</div>
 
 <div id="list_holder"></div>
 
+</body>
 </html>
+
+<script type="text/babel">
+
+    ReactDOM.render(<h1>Products</h1>,document.getElementById('product'));
+
+    class Action
+    {
+        async load(action){
+            const response = await fetch("https://product-demo-rmca.herokuapp.com/products/all", { method:'GET',mode:'no-cors'});
+            const data = await response.json();
+            return data;
+
+        }
+    }
+    class ListItems extends React.Component
+    {
+
+
+        constructor() {
+            super();
+        }
+        Items= {data:null}
+        update(data)
+        {
+            this.Items.data = data;
+            this.render();
+        }
+        async render() {
+            if (this.Items.data != null) {
+                return (
+
+                    <ul>
+                        <ListItem Product={this.Items.data.results[0]}/>
+                    </ul>
+                );
+            } else {
+                const result = new Action();
+                const response = await fetch("https://product-demo-rmca.herokuapp.com/products/all", {
+                    method: 'GET',
+                    mode: 'no-cors'
+                });
+                const data = await response.json();
+                
+
+                console.log(list);
+
+                return (<ul><li>
+                    <p>{this.props.Product.id}</p>
+                    <p>{this.props.Product.description}</p>
+                    <p>{this.props.Product.price.value}</p>
+                    <p>{this.props.Product.price.currency}</p>
+                    <p>{this.props.Product.type}</p>
+                    <p>{this.props.Product.department}</p>
+                    <p>{this.props.Product.weight}</p>
+                </li></ul>);
+            }
+        }
+    }
+
+
+          ReactDOM.render(<ListItems/>, document.getElementById("list_holder"));
+
+
+</script>
